# fmodifier

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
core/src/: command.rs  core.rs  core_e.rs  file.rs  output.rs  token.rs  token_parser.rs
core/src/commands/: buffer_write_bytes.rs  create_file.rs  make_table.rs  merge_buffers.rs  mod.rs  pull_out_slice.rs  show_buffer.rs  show_file.rs
fmodifier/: Cargo.toml
fmodifier/src/: clap_app.rs  main.rs  run.rs
src/: lib.rs
src/command_handler/: command.rs  mod.rs
src/command_handler/commands/: buffer_write_bytes.rs  core_cmd.rs  mod.rs
src/core/: buffer.rs  command.rs  core.rs  core_e.rs  file.rs  mod.rs  operand.rs  output.rs  parse_operands.rs  token.rs  token_parser.rs  tokens_to_operands.rs  variables.rs
src/core/commands/: buffer_info.rs  buffer_set_byte.rs  create_file.rs  fill_buffer.rs  from_buffer_to_file.rs  from_file_to_buffer.rs  get_variable.rs  make_buffer.rs  merge_buffers.rs  mod.rs  open_file.rs  set_variable.rs  show_buffer.rs  turn_buffer_to_file.rs  turn_file_to_buffer.rs  variables_list.rs
src/terminal/: exec_rcommand.rs  mod.rs  output.rs  rcommand.rs  runner.rs  terminal.rs  tokenizer.rs
src/terminal/commander/: file.rs  mod.rs  terminal.rs
src/terminal/exec_rcommand/: help.rs
src/terminal/output/: core_error_impl.rs  core_output_impl.rs  parse_error_impl.rs  tokenize_error_impl.rs  tokens_translation_error_impl.rs
terminal/: Cargo.toml
terminal/src/: lib.rs  output.rs  runner.rs  terminal.rs  tokenizer.rs
terminal/src/commander/: file.rs  mod.rs  terminal.rs
(+10 files in other folders)
